--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000">
     <meta name="author" content="Danilo César">
     <title>{{ appName }}</title>
+
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 
